--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 body {
     font-family: 'Lato' sans-serif;
     padding: 20px 60px;
+    
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
