--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    position: relative;
+
 
 .image {
     width: 100%;
@@ -12,6 +13,24 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+}
+
+.custom-button {
+    position: absolute;
+    top: 320px;
+    opacity: 0.7;
+    display: none;
+}
+
+&:hover {
+    .image {
+        opacity: 0.8;
+    }
+
+    .custom-button {
+        display: flex;
+        opacity: 0.85;
+    }
 }
 
 .collection-footer {
@@ -25,4 +44,6 @@
 .name {
     width: 90%;
     margin-bottom: 15px;
+}
+
 }
