--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,6 +1,6 @@
 .collection-item {
     height: 450px;
-    width: 20%;
+    width: 20vw;
     display: flex;
     flex-direction: column;
     align-items: center;
