--- a/client/src/pages/collection/collection.styles.scss
+++ b/client/src/pages/collection/collection.styles.scss
@@ -11,6 +11,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 10px;
+        justify-items: center;
     }
 
     & .collection-item {
