optimising for mobile view

--- a/client/src/components/collection-preview/collection-preview.styles.scss
+++ b/client/src/components/collection-preview/collection-preview.styles.scss
@@ -13,3 +13,17 @@
     display: flex;
     justify-content: space-between;
 }
+
+/* Media query */ 
+
+@media screen and (max-width: 800px) {
+    .preview {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 25px;
+    }
+
+    .collection-preview {
+        padding: 0 10px;
+    }
+}
