--- a/client/src/components/directory/directory.styles.scss
+++ b/client/src/components/directory/directory.styles.scss
@@ -4,3 +4,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+
+/* Media query */
+
+@media screen and (max-width: 800px) {
+  .directory-menu {
+    flex-direction: column;
+  }
+}
