--- a/client/src/pages/sign-up-sign-in/sign-up-sign-in.styles.scss
+++ b/client/src/pages/sign-up-sign-in/sign-up-sign-in.styles.scss
@@ -6,3 +6,12 @@
     
     
 }
+
+/* Media query */
+
+@media screen and (max-width: 800px) {
+    .sign-in-sign-up {
+        flex-direction: column;
+        width: 100%;
+    }
+}
