--- a/client/src/components/checkout-item/checkout-item.styles.scss
+++ b/client/src/components/checkout-item/checkout-item.styles.scss
@@ -35,3 +35,15 @@
     cursor: pointer;
   }
 }
+
+/* Media query */ 
+
+@media screen and (max-width: 800px) {
+  .checkout-item {
+    font-size: 15px;
+    
+    .quantity {
+      padding-left: 5px;
+    }
+  }
+}
