--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -47,3 +47,22 @@
 }
 
 }
+
+
+/* Media query */ 
+
+@media screen and (max-width: 800px) {
+    .collection-item {
+        width: 100%;
+    
+
+        .custom-button {
+            opacity: 0.7;
+            display: block;
+            min-width: unset;
+            padding: 0 10px;
+            font-size: 10px;
+            
+        }
+    }
+}
