--- a/client/src/components/form/form-input.styles.scss
+++ b/client/src/components/form/form-input.styles.scss
@@ -57,5 +57,18 @@ $main-color: black;
 
 }
 
+/* Media query */ 
+
+@media screen and (max-width: 800px) {
+  .group {
+
+    .form-input {
+      width: 90%;
+     
+      
+    }
+  }
+}
+
   
 
