--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -37,5 +37,20 @@
 
 .signout {
     cursor: pointer;
+    color: white;
+}
+
+/* Media query */
+
+@media screen and (max-width: 800px) {
+    .logo-name {
+        margin-left: 10px;
+        font-size: 35px;
+    }
+
+    .nav-options {
+        font-size: 10px;
+        width: 70%;
+    }
 }
 
