--- a/client/src/pages/checkout/checkout.styles.scss
+++ b/client/src/pages/checkout/checkout.styles.scss
@@ -41,3 +41,24 @@
     margin-top: 50px;
   }
 }
+
+/*Media query */ 
+
+@media screen and (max-width: 800px) {
+  .checkout-page {
+    width: 90%;
+    
+    .checkout-header {
+      padding: 5px;
+      font-size: 10px;
+    }
+
+    .total {
+      font-size: 25px;
+    }
+
+    .test-warning {
+      font-size: 20px;
+    }
+  }
+}
