--- a/client/src/pages/shop/shop.styles.scss
+++ b/client/src/pages/shop/shop.styles.scss
@@ -1,3 +1,11 @@
 .shop-page {
     padding: 0 60px;
 }
+
+/*Media query */
+
+@media screen and (max-width: 800px) {
+    .shop-page {
+        padding: 0;
+    }
+}
